# Rubej_2

./: CMakeLists.txt
.github/workflows/: wk.yml
munition/: munition.cpp  munition_h.cpp
tests/: test_ammo.cpp
